change creation of list